--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,24 @@
 *{
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Poppins';
+}
+
+header{
+  background-color: #f5f5f5;
+  height: 100px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+header p{
+  text-align:center;
+}
+
+section {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
